--- a/Gift-RUN-rn/package.json
+++ b/Gift-RUN-rn/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@ui-kitten/components": "^5.1.1",
