--- a/Gift-RUN-rn/package.json
+++ b/Gift-RUN-rn/package.json
@@ -23,7 +23,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-circle-slider": "^2.9.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-elements-universe": "^0.0.0",
     "react-native-maps": "0.29.4",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
