added axios ngrok, and tied in the signup route. The route is returning the JWT as expected

--- a/Gift-RUN-rn/package.json
+++ b/Gift-RUN-rn/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-location": "~13.0.4",
     "expo-status-bar": "~1.1.0",
+    "ngrok": "^4.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
